Archive2/10/3312c912323fca/output
main.cpp:10:16: error: invalid application of 'sizeof' to an incomplete type 'Widget'
  std::cout << sizeof(Widget) << std::endl;
               ^     ~~~~~~~~
main.cpp:4:7: note: forward declaration of 'Widget'
class Widget;
      ^
1 error generated.
